--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -14,13 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up MySQL
-        env:
-          DB_DATABASE: test_db
-          DB_USER: root
-          DB_PASSWORD: 'root'
         run: |
           sudo /etc/init.d/mysql start
-          mysql -e 'CREATE DATABASE ${{ env.DB_DATABASE }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
+          mysql -e 'CREATE DATABASE test_db;' -uroot -proot
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
