--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost/dbplayers
 spring.datasource.username=root
-spring.datasource.password=CanisRufus1977
+spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
