--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up MySQL
         run: |
           sudo /etc/init.d/mysql start
-          mysql -e 'CREATE DATABASE test_db;' -uroot -proot
+          mysql -e 'CREATE DATABASE dbplayers;' -uroot -proot
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
