--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@
                             </execution>
                             <execution>
                                 <id>report</id>
+                                <phase>test</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
