--- a/.github/workflows/requireChecklist.yaml
+++ b/.github/workflows/requireChecklist.yaml
@@ -3,7 +3,7 @@ name: Require Checklist
 on:
   pull_request:
     branches: [ "main" ]
-    types: [ "ready_for_review", "synchronize" ]
+    types: [ "ready_for_review"]
 
 jobs:
   job1:
